src/test/ui/issues/issue-6596-2.stderr
error: unknown macro variable `nonexistent`
  --> $DIR/issue-6596-2.rs:5:16
   |
LL |         { $inp $nonexistent }
   |                ^^^^^^^^^^^^ unknown macro variable
...
LL |     g!(foo);
   |     -------- in this macro invocation

error: unknown macro variable `nonexistent`
  --> $DIR/issue-6596-2.rs:5:16
   |
LL |         { $inp $nonexistent }
   |                ^^^^^^^^^^^^
   |
   = note: #[deny(meta_variable_misuse)] on by default

error: aborting due to 2 previous errors

